--- a/UnityProject/My project/Packages/manifest.json
+++ b/UnityProject/My project/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.atteneder.gltfast": "https://github.com/atteneder/glTFast.git",
     "com.unity.collab-proxy": "2.9.3",
     "com.unity.feature.development": "1.0.1",
     "com.unity.inputsystem": "1.14.0",
